--- a/app/src/main/res/layout/activity_authorization.xml
+++ b/app/src/main/res/layout/activity_authorization.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="30dp"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
+        android:background="@color/white"
         android:textSize="25sp"
         android:paddingLeft="10dp"
         android:autofillHints="emailAddress" />
@@ -47,6 +48,7 @@
         android:textAlignment="textStart"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
+        android:background="@color/white"
         android:textSize="25sp"
         android:paddingLeft="10dp"
         android:autofillHints="password"/>
