--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30sp"
         android:layout_marginTop="15sp"
+        android:background="@color/white"
         android:hint="@string/username"
         android:minHeight="48dp"
         android:textColorHint="@color/black"
@@ -40,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30sp"
         android:layout_marginTop="15sp"
+        android:background="@color/white"
         android:hint="@string/Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
@@ -55,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30sp"
         android:layout_marginTop="15sp"
+        android:background="@color/white"
         android:hint="@string/Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
@@ -71,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30sp"
         android:layout_marginTop="15sp"
+        android:background="@color/white"
         android:hint="@string/confirm_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
