--- a/app/src/main/res/layout/item_services.xml
+++ b/app/src/main/res/layout/item_services.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
         <TextView
-            android:id="@+id/nameBrand"
+            android:id="@+id/nameService"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -51,7 +51,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameBrand" />
+            app:layout_constraintTop_toBottomOf="@+id/nameService" />
         <TextView
             android:id="@+id/PriceCount"
             android:layout_width="0dp"
@@ -63,7 +63,7 @@
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/Price"
-            app:layout_constraintTop_toBottomOf="@+id/nameBrand" />
+            app:layout_constraintTop_toBottomOf="@+id/nameService" />
         <TextView
             android:id="@+id/PlaceToBook"
             android:layout_width="0dp"
