--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -86,7 +86,7 @@
         android:autofillHints="password" />
 
     <Button
-        android:id="@+id/Sign_up"
+        android:id="@+id/SignUp"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginHorizontal="85sp"
