--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -66,7 +66,7 @@
         tools:targetApi="lollipop" />
 
     <Button
-        android:id="@+id/Sign_up"
+        android:id="@+id/SignUp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="85sp"
